--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-toastify": "^4.1.0",
     "@types/styled-components": "^5.1.26",
     "@types/yup": "^0.32.0",
+    "framer-motion": "^7.6.1",
     "manifest.json": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
